test/should-fail/jfxc2355.fx
/*
 * @test/compile-error
 */
import java.awt.Color;
Color.getRGBComponents(null);
